# fwatcher.rs

./: Cargo.toml
src/: lib.rs
tests/: closure.rs
